# tortoise-orm-spl

./: README.md  pyproject.toml
app/: main.py  models.py
test/: test_main.py
