[tool.poetry]
name = "tortoise-orm-spl"
version = "0.1.0"
description = ""
authors = ["c2io <c2io@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tortoise-orm = "^0.17.8"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true